k8s/suave-jupyter.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  labels:
    k8s-app: test
  namespace: suave
spec:
  containers:
  - name: dan
    image: sdsc/suave-nb
    imagePullPolicy: Always
    args: ["python3", "/usr/local/bin/jupyterhub", "-f", "/etc/jupyterhub/jupyterhub_config.py", "--port", "8888"]
    resources:
      limits:
        memory: "16G"
        cpu: 8
        #nvidia.com/gpu: 0
      requests:
        memory: "16G"
        cpu: 8
        #nvidia.com/gpu: 0
    volumeMounts:
      - name: git-jupyter-suave
        mountPath: "/git-jupyter-suave"
  restartPolicy: Never
  volumes:
    - name: git-jupyter-suave
      emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: test
  name: test
  namespace: suave
spec:
  type: NodePort
  ports:
  - port: 8888
    name: web
  selector:
    k8s-app: test
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  namespace: suave
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: suave-jupyter.nautilus.optiputer.net
    http:
      paths:
      - path: /
        backend:
          serviceName: test
          servicePort: 8888
